Fixed the z-index on top-nav and dropdown-content

--- a/less/services.less
+++ b/less/services.less
@@ -11,7 +11,7 @@
                 position: fixed;
                 background-color: #97A4B0;
                 padding: 15px 75px;
-                z-index: 2;
+                z-index: 3;
                 cursor: pointer;
 
                 @media @mobile {
@@ -40,7 +40,7 @@
                 align-items: center;
                 position: fixed;
                 background-color: #97A4B0;
-                z-index: 2;
+                z-index: 3;
                 
                 .nav-link {
                     width: 100%;
